helloworld-poc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"prometheus.io/path":"/actuator/prometheus","prometheus.io/port":"8081","prometheus.io/scrape":"true"},"name":"helloworld-poc","namespace":"biznext-admin-dev"},"spec":{"ports":[{"name":"http","port":8080,"targetPort":8080},{"name":"http-service","port":8081,"targetPort":8081}],"selector":{"app":"helloworld-poc"},"type":"ClusterIP"}}
    prometheus.io/path: /actuator/prometheus
    prometheus.io/port: "8081"
    prometheus.io/scrape: "true"
  creationTimestamp: "2020-09-21T10:06:42Z"
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:prometheus.io/path: {}
          f:prometheus.io/port: {}
          f:prometheus.io/scrape: {}
      f:spec:
        f:ports:
          .: {}
          k:{"port":8080,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
          k:{"port":8081,"protocol":"TCP"}:
            .: {}
            f:name: {}
            f:port: {}
            f:protocol: {}
            f:targetPort: {}
        f:selector:
          .: {}
          f:app: {}
        f:sessionAffinity: {}
        f:type: {}
    manager: kubectl
    operation: Update
    time: "2020-09-21T10:06:42Z"
  name: helloworld-poc
  namespace: biznext-admin-dev
  resourceVersion: "29761852"
  selfLink: /api/v1/namespaces/biznext-admin-dev/services/helloworld-poc
  uid: f781bc4f-49f9-45c5-a2f0-cb7e18adf168
spec:
  clusterIP: 172.30.4.6
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: http-service
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: helloworld-poc
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
